manifests/productcatalogue.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogue
  labels:
    app: productcatalogue
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: productcatalogue
  ports:
  - protocol: TCP
    port: 8020
    name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogue
  labels:
    app: productcatalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogue
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: productcatalogue
    spec:
      containers:
      - name: productcatalogue
        image: quay.io/ssmiller25/djproductcatalogue:latest
        ports:
        - containerPort: 8020
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8025
          initialDelaySeconds: 30
          timeoutSeconds: 1
