manifests/stockmanager.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stockmanager
  labels:
    app: stockmanager
spec:
  type: ClusterIP
  selector:
    app: stockmanager
  ports:
  - protocol: TCP
    port: 8030
    name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockmanager
  labels:
    app: stockmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockmanager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: stockmanager
    spec:
      containers:
      - name: stockmanager
        image: quay.io/ssmiller25/djstockmanager:latest
        ports:
        - containerPort: 8030
        #livenessProbe:
        #  httpGet:
        #    path: /health
        #    port: 8030
        #  initialDelaySeconds: 30
        #  timeoutSeconds: 10
